# pharmaos

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  commitlint.config.mjs  docker-compose.yml  eslint.config.mjs  package.json  pharmaos.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/pharmaos_api/: __init__.py  audit.py  celery_app.py  cli.py  config.py  db.py  deps.py  errors.py  gs1.py  main.py  middleware.py
apps/api/src/pharmaos_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/pharmaos_api/models/: __init__.py  audit.py  base.py  branch.py  catalog.py  compliance.py  customer.py  finance.py  operations.py  prescription.py  purchasing.py  rbac.py  reference.py  settings.py  user.py
apps/api/src/pharmaos_api/printing/: __init__.py  escpos.py
apps/api/src/pharmaos_api/routers/: auth.py  cashier.py  catalog.py  compliance.py  config.py  customers.py  finance.py  inventory.py  pos.py  prescriptions.py  purchases.py  reports.py  returns.py  users.py
apps/api/src/pharmaos_api/security/: __init__.py  crypto.py  csrf.py  jwt.py  keystore.py  passwords.py
apps/api/src/pharmaos_api/services/: __init__.py  audit_service.py  auth_service.py  backup_service.py  cashier_service.py  catalog_service.py  config_service.py  controlled_substance_service.py  customer_service.py  expense_service.py  inventory_service.py  pack_serial_service.py  payment_service.py  prescription_service.py  purchase_service.py  receipt_service.py  reporting_service.py  return_service.py  sales_service.py  seed_service.py  supplier_service.py  tax_service.py  user_service.py  users_admin_service.py
apps/api/src/pharmaos_api/services/compliance/: eda_tt_adapter.py  ereceipt_service.py  eta_adapter.py  tt_service.py
apps/api/tests/: conftest.py  test_audit.py  test_auth_flow.py  test_backup.py  test_batch_tracking_m4.py  test_cashier_m10.py  test_catalog.py  test_config.py  test_crypto.py  test_customers_m5.py  test_ereceipt_m10.py  test_expenses_m9.py  test_hardening_m11.py  test_inventory.py  test_inventory_api.py  test_jwt.py  test_pack_serials_m3.py  test_passwords.py  test_pos_api.py  test_prescriptions_m8.py  test_printing_m9.py  test_purchases_m1.py  test_purchases_po_m2.py  test_query_plans.py  test_rate_limit.py  test_rbac.py  test_reports_m1.py  test_returns_m7.py  test_seed.py  test_skeleton_sale.py  test_tt_events_m11.py  test_users_admin.py  test_vat_m6.py
apps/desktop/: package.json  tsconfig.json
apps/web/: next.config.ts  package.json  tsconfig.json
docs/: phase2-acceptance.md  pilot-checklist.md  versions.md
supabase/: config.toml
supabase/migrations/: 20260711000100_extensions.sql  20260711000200_core_schema.sql  20260711000300_catalog_schema.sql  20260711000400_users_role.sql  (+21 more)
(+31 files in other folders)
